--- a/content/pages/passer-a-laction/_index.html
+++ b/content/pages/passer-a-laction/_index.html
@@ -3,6 +3,10 @@ title: >
   Passer à l&#39;action
 breadcrumb_title: "Passer à l&#39;action"
 url: "/passer-a-laction/"
+children:
+  - /passer-a-laction/exemples/
+  - /passer-a-laction/budgets/
+  - /passer-a-laction/reseau/
 position: 5
 bodyclass: 
 description: >
