--- a/content/pages/fonctionnalites/communication/sites-web/_index.html
+++ b/content/pages/fonctionnalites/communication/sites-web/_index.html
@@ -10,7 +10,8 @@ description: >
 description_short: >
   Créer des sites éco-conçus, accessibles, esthétiques, responsives et performants
 header_text: >
-  
+  Créer des sites éco-conçus, accessibles, esthétiques, responsives et performants
+
 blocks:
   - template: chapter
     title: >
