--- a/content/_index.html
+++ b/content/_index.html
@@ -27,6 +27,23 @@ header_text: >
 blocks:
   - template: call_to_action
     title: >
+      
+    position: 9
+    data:
+      text: >-
+        <p>Test de bouton unique sans titre</p>
+      button:
+        text: >-
+          Bouton unique
+        url: >-
+          https://www.ensembleatable.fr/
+      button_secondary:
+        text: >-
+          
+        url: >-
+
+  - template: call_to_action
+    title: >
       Décarbonation
     position: 1
     data:
