--- a/content/pages/usages/_index.html
+++ b/content/pages/usages/_index.html
@@ -22,6 +22,22 @@ blocks:
       
     position: 1
     data:
-    
+  - template: call_to_action
+    title: >
+      Décarbonation
+    position: 1
+    data:
+      text: >-
+        <p>Découvrez le plan de décarbonation des sites Web des Universités Françaises : un potentiel de sobriété de plus de 8000 tonnes équivalent CO2?<br></p>
+      button:
+        text: >-
+          Consulter le plan
+        url: >-
+          https://carbone.osuny.org/
+      button_secondary:
+        text: >-
+          En savoir plus
+        url: >-
+          https://carbone.osuny.org/
 ---
  
