--- a/content/fr/app/maintenance.html
+++ b/content/fr/app/maintenance.html
@@ -1,3 +1,8 @@
 ---
-title: Opération de maintenance en cours 
+title: Opération de maintenance en cours
+layout: maintenance
 ---
+
+Nous sommes en train de prendre soin de l'application.
+Pour éviter d'endommager les données, nous avons coupé l'accès temporairement.
+Vous avez reçu un message email vous informant des délais d'insponibilité prévus.
